@startuml
class Issue {
    Long id
    String title
    String description
    Priority priority
    Status status
    Member reporter
    Member assignee
    Member fixer
    Project project
    Boolean isDeleted
    List<Comment> comments
}

class IssueService {
    +IssueResponseDto getIssue(Long signId, Long issueId)
}

class IssueRepository {
    +Optional<Issue> findByIdAndIsDeletedFalse(Long id)
}

class DtoConverter {
    +IssueResponseDto createIssueResponseDto(Issue issue)
}

IssueService --> IssueRepository
IssueService --> DtoConverter
Issue --> Project
Issue --> Member
Issue --> Comment
@enduml
